tests/miniJava/neg/003520_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if int ( 0 ) { } else { } } }
